missed some of Gail's comments

--- a/Paper/tracing.bib
+++ b/Paper/tracing.bib
@@ -735,8 +735,7 @@ AUTHOR    = "H. Martin B{\"u}cker and A. Rasch and E. Slusanschi
              and Christian H.~Bischof",
 BOOKTITLE = "Proceedings of the 17th Annual International Symposium
              on High Performance Computing Systems and Applications
-             and OSCAR Symposium, Sherbrooke, Qu\'{e}bec, Canada,
-             May 11--14",
+             and OSCAR Symposium",
 EDITOR    = "D. S\'{e}n\'{e}chal",
 PUBLISHER = "NRC Research Press",
 ADDRESS   = "Ottawa",
