updated version info , tex needs reformatting

--- a/Paper/tracing.tex
+++ b/Paper/tracing.tex
@@ -73,16 +73,20 @@
 
 \title{A Tracing Facility for Nonsmooth Model Behavior}
 \author{J. Utke\\\\
-        \small Preprint version: \input{versionInfo.txt} compiled for \\
-        \small \openad\ version: \input{versionInfoOpenAD.txt}\\
-        \small xaifBooster version: \input{versionInfoxaifBooster.txt}\\
+\scriptsize Preprint \input{versionInfo.txt} \\
+\scriptsize compiled on \today\ with \\
+\begin{minipage}{3cm}
+\tiny
+\verbatiminput{versionInfoOpenAD.txt}
+\end{minipage}
 }
-\date{ }
+\date{ } 
 
 \fancyhead[RE]{\leftmark}
 \fancyhead[LE]{}
 \fancyhead[RO]{}
 \fancyhead[LO]{\nouppercase\rightmark}
+\fancyfoot[LE,RO]{\date{ }}
 \fancyfoot[LO,RE]{Tracing Nonsmooth Model Behavior}
 
 \begin{document}
