--- a/Paper/tracing.tex
+++ b/Paper/tracing.tex
@@ -286,7 +286,7 @@ generated from running the driver in \reffig{fig:OneMinuteDriver}}\label{fig:One
 Clearly the tracing outputs are identical except for line 4, where we show the 
 different output for the respective smooth subdomain \lstinline{sd} at which the 
 \lstinline{tan} intrinsic is being evaluated. The interpretation of the subdomain of $\tan(x)$ 
-is \lstinline{sd=}$k$ with integer $k=\lfloor\frac{x+\pi/2)}{\pi}\rfloor$, and in our 
+is \lstinline{sd=}$k$ with integer $k=\lfloor\frac{x+\pi/2}{\pi}\rfloor$, and in our 
 example the change in the \lstinline{sd} value  indicates that we moved from one smooth 
 subdomain to another. 
 We note that the subdomain is computed when the intrinsic is called. Lines 2 and 3 
